--- a/css/estilos.css
+++ b/css/estilos.css
@@ -176,11 +176,11 @@ body{
 
 .Formulario-de-contacto {
     width: 400px;
-    max-width: 100%;
+    max-width: 95%;
     margin: auto;
     margin-top: 30px;
-    padding: 20px;
-    box-shadow: 0 0 20px 1px rgba(0,0,0,0.3);
+    padding: 2%;
+    box-shadow: 0 0 20% 1% rgba(0,0,0,0.3);
     position: relative;
 
 
